crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_multi_focus_cluster_screen.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Cluster [NAV] | [?] Unknown                                      │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Cluster Information───────────────────────────────────────────────────────────┐
│                 No cluster info loaded. Press 'r' to refresh.                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV]  Tab:Next | Shift+Tab:Prev | Ctrl+Tab:Focus | Ctrl+Shift+Tab:Focus | ?:H│
└──────────────────────────────────────────────────────────────────────────────┘
