crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_multi_focus_configs_screen.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Config Files [NAV] | [?] Unknown                                 │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Configuration Files───────────────────────────────────────────────────────────┐
│                 No config files loaded. Press 'r' to refresh.                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│[NAV]  Tab:Next | Shift+Tab:Prev | Ctrl+Tab:Focus | Ctrl+Shift+Tab:Focus | ?:H│
└──────────────────────────────────────────────────────────────────────────────┘
