crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_search_narrow_terminal.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────┐
│Splunk TUI - Search [FOCUS] | [?] Unknown                 │
│ |                                                        │
└──────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────┐
│index=main                                                │
└──────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────┐
│Press Enter to execute search                             │
└──────────────────────────────────────────────────────────┘
┌Results───────────────────────────────────────────────────┐
│     No results. Enter a search query and press Enter.    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│[FOCUS]  Tab:Next | Shift+Tab:Prev | Ctrl+Tab:Results  | E│
└──────────────────────────────────────────────────────────┘
