crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_search_very_narrow_terminal.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────┐
│Splunk TUI - Search [FOCUS] | [?] Unkn│
│ |                                    │
└──────────────────────────────────────┘
┌Search Query──────────────────────────┐
│idx                                   │
└──────────────────────────────────────┘
┌Status────────────────────────────────┐
│Press Enter to execute search         │
└──────────────────────────────────────┘
┌Results───────────────────────────────┐
│No results. Enter a search query and p│
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
│[FOCUS]  Tab:Next | Shift+Tab:Prev | C│
└──────────────────────────────────────┘
