crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_with_auth_recovery_popup.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                             │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────┐
│                                                                              │
└───────────────┌Authentication Error──────────────────────────┐───────────────┘
┌Status─────────│Invalid credentials detected. The username,   │───────────────┐
│Press Enter to │password, or API token is incorrect.          │               │
└───────────────│                                              │───────────────┘
┌Results────────│Next Steps:                                   │───────────────┐
│               │• Check your username and password            │.              │
│               │• Verify your API token is valid              │               │
│               │• Ensure your account has not been locked     │               │
│               │                                              │               │
│               │───                                           │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Esc:Close | Enter:Run Ctrl+e:Export PgDn:PgDn PgUp:PgUp| ?:Help | q:Quit      │
└──────────────────────────────────────────────────────────────────────────────┘
