crates/tui/tests/snapshots/snapshot_footer_tests__snapshot_footer_with_error_popup.snap
---
source: crates/tui/tests/snapshot_footer_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Search | [?] Unknown                                                                 │
│ |                                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Search Query──────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Status────────────────────────────────────────────────────────────────────────────────────────────┐
│Press Enter to execute search                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results────────────┌Error Details─────────────────────────────────────────────┐───────────────────┐
│                   │                Press Esc, q, or e to close               │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│         ┌Error Details─────────────────────────────────────────────────────────────────┐         │
│         │Summary: Test error                                                           │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │         │
│         │                                                                              │───────┐ │
│         │                                                                              │%      │ │
│         │                                                                              │       │ │
│         │                                                                              │       │ │
│         │                                                                              │       │ │
│         │                                                                              │───────┘ │
└─────────│                                                                              │─────────┘
┌─────────│                                                                              │─────────┐
│Esc:Close│                                                                              │         │
└─────────└──────────────────────────────────────────────────────────────────────────────┘─────────┘
